--- a/views/formaltaperro.pug
+++ b/views/formaltaperro.pug
@@ -1,8 +1,8 @@
 extends layout
-
+ //- este formulario no funciona, no logro que cree perros en la bbdd (error 404). tampoco funciona el de edición.
 block content
     h2 Formulario de alta de un nuevo perro
-    form
+    form(action="api/perros/crear", method="post")
         div(class="form-group")
             label Nombre del perro
             input(class="form-control")
@@ -11,7 +11,9 @@ block content
             input(class="form-control")
         div(class="form-group")
             label Sexo
-            input(class="form-control")
+            select(class="form-control")
+                option(value="macho") Macho
+                option(value="hembra") Hembra
         div(class="form-group")
             label Edad en años (de 0 en adelante)
             input(class="form-control")
@@ -48,6 +50,7 @@ block content
         div(class="form-group")
             label Imagen
             input(class="form-control")
-        input(type="button", value="Enviar", class="btn btn-dark btn-lg btn-block")
+        input(type="submit" value="Enviar" class="btn btn-dark btn-lg btn-block")
                 
+               
         
