--- a/views/formeditarperro.pug
+++ b/views/formeditarperro.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
     h2 Formulario de edición de perros registrados
-    form
+    form(action="api/perros/:perroId", method="")
         div(class="form-group")
             label Nombre del perro
             input(class="form-control")
@@ -11,7 +11,9 @@ block content
             input(class="form-control")
         div(class="form-group")
             label Sexo
-            input(class="form-control")
+            select(class="form-control")
+                option(value="macho") Macho
+                option(value="hembra") Hembra
         div(class="form-group")
             label Edad en años (de 0 en adelante)
             input(class="form-control")
@@ -48,4 +50,4 @@ block content
         div(class="form-group")
             label Imagen
             input(class="form-control")
-        input(type="button", value="Enviar", class="btn btn-dark btn-lg btn-block")
+        input(type="submit", value="Enviar", class="btn btn-dark btn-lg btn-block")
