--- a/views/perros/vistaperro.pug
+++ b/views/perros/vistaperro.pug
@@ -1,19 +1,20 @@
 extends ../layout.pug
-
+//por qué en esta vista no imprime nada de la información del perro??
 block content
     if perro
         .perro
             h3= perro.nombre_perro
+            p Id: #{perro.id}
             p Raza:  #{perro.raza}
             p Edad:  #{perro.edad}
+            p Tamaño:  #{perro.tamano}
             p Años:  #{perro.edad_numero}
             p Sexo:  #{perro.sexo}
-            p Tamaño:  #{perro.tamano}
             p Apto con gatos:  #{perro.apto_gatos}
             p Leishmania:  #{perro.leishmania}
             p Localizacion: #{perro.localizacion}
             p Descripcion: #{perro.descripcion}
-            
-
+            p Imagen: #{perro.imagen}
+            p Protectora: #{perro.fk_protectora}
     else
         p El perro no existe
