--- a/views/adoptantes/formEdit.pug
+++ b/views/adoptantes/formEdit.pug
@@ -49,6 +49,9 @@ block content
         .form-group
             label Fotos de la casa
             textarea.form-control(type="text", name="fotos_casa", value=adoptante.fotos_casa)
+        .form-group
+            label Password
+            input.form-control(type="password", name="password", value=adoptante.password)
 
         input(type="hidden", name="IdAdoptante", value=adoptante.id) 
         input.btn.btn-block.btn-info(type="submit", value="Enviar")
